unpackaged/main/default/objects/MRRP_Score__c/MRRP_Score__c.object-meta.xml
<CustomObject>
    <customHelpPage>MRRP_Help</customHelpPage>
    <description>Medicare Readmission Reduction Penalty Score</description>
    <label>Medicare Readmission Reduction Penalty</label>
    <nameField>
        <label>Fiscal Year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MRRP Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>