unpackaged/main/default/objects/MRRP_Score__c/fields/Est_Revenue_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Est_Revenue_Adjustment__c</fullName>
    <label>Est. Revenue Adjustment (USD)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>