unpackaged/main/default/objects/MRRP_Score__c/fields/Hip_Knee_Replacement_Excess_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Hip_Knee_Replacement_Excess_Ratio__c</fullName>
    <inlineHelpText>This is the ratio of predicted readmissions (hospital performance) to expected readmissions (average all hospitals’ performance).  A ratio greater than 1 indicates excess readmissions.</inlineHelpText>
    <label>Hip/Knee Replacement Excess Ratio</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>