unpackaged/main/default/objects/MRRP_Score__c/fields/Hip_Knee_Replacement_Excess_Ratio_Rank__c.field-meta.xml
<CustomField>
    <fullName>Hip_Knee_Replacement_Excess_Ratio_Rank__c</fullName>
    <label>Hip/Knee Rep Excess Ratio Rank (99 best)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>