unpackaged/main/default/objects/MRRP_Score__c/fields/MRRP_Hospital__c.field-meta.xml
<CustomField>
    <fullName>MRRP_Hospital__c</fullName>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Medicare Readmission Reduction Penalty Score</relationshipLabel>
    <relationshipName>MRRP_Scores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>