unpackaged/main/default/objects/MRRP_Score__c/fields/Overall_Gain_Penalty_All_Measures__c.field-meta.xml
<CustomField>
    <fullName>Overall_Gain_Penalty_All_Measures__c</fullName>
    <label>Overall Gain/Penalty(All Measures) (%)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>