unpackaged/main/default/objects/MRRP_Score__c/fields/Overall_Gain_Penalty_Percentile_Rank__c.field-meta.xml
<CustomField>
    <fullName>Overall_Gain_Penalty_Percentile_Rank__c</fullName>
    <label>Overall Gain/Penalty Rank (99 best)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>