unpackaged/main/default/objects/MRRP_Score__c/fields/SF_18_Char_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_18_Char_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>SF 18 Char ID</label>
    <type>Text</type>
</CustomField>